--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
 </div>
   <!-- Project -->
   <script src="app.js"></script>
+  <style type="text/css" media="all">
+   .link .active{
+      background: red;
+    }
+  </style>
 </body>
 </html>
